force-app/main/default/objects/Sighting__c/Sighting__c.object-meta.xml
<CustomObject>
    <description>Main business object: reports of a character being seen somewhere</description>
    <label>Sighting</label>
    <nameField>
        <displayFormat>SIG-{00000}</displayFormat>
        <label>Sighting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sightings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>