force-app/main/default/objects/Sighting__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Character</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Sightings</relationshipLabel>
    <relationshipName>Sightings</relationshipName>
    <type>Lookup</type>
</CustomField>