force-app/main/default/objects/Sighting__c/fields/Credibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Credibility_Score__c</fullName>
    <label>Credibility Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>