force-app/main/default/objects/Sighting__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension</label>
    <length>18</length>
    <type>Text</type>
</CustomField>