force-app/main/default/objects/Sighting__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Sightings</relationshipLabel>
    <relationshipName>Sightings</relationshipName>
    <type>Lookup</type>
</CustomField>