force-app/main/default/objects/Sighting__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Sightings</relationshipLabel>
    <relationshipName>Sightings</relationshipName>
    <type>Lookup</type>
</CustomField>