force-app/main/default/objects/Sighting__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>