force-app/main/default/objects/Sighting__c/fields/Resident_Count__c.field-meta.xml
<CustomField>
    <fullName>Resident_Count__c</fullName>
    <label>Resident Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>