force-app/main/default/objects/Sighting__c/fields/Sighting_Date__c.field-meta.xml
<CustomField>
    <fullName>Sighting_Date__c</fullName>
    <label>Sighting Date</label>
    <type>DateTime</type>
</CustomField>